site/assets/css/style.less
@footer-bg-color: #212529;
@footer-dark-bg-color: #343a40;
@footer-text-color: #FFF;

html, body {
    margin: 0;
    padding: 0;
}

.textIsBold {
    font-weight: bold;
}

#map {
    height: 400px;
    background-color: gray;
}
@media screen and (min-width: 320px){
    .product-images {
        width:100%;
        > img {
            width:100%;
        }
    }
    .serif-font {
        font-family: 'Merriweather', serif;
    }

    .display-4.serif-font{
        font-size: 3em;
    }

    .product {
        background-color: white;
        text-align: center;
    }

    .product-text {
        font-size: 0.8em;
        color: gray;
    }

    .navbar-brand > img {
        height: 30px;
    }

    .employee-list {
        > .employee {
            text-align:center;
            width: 18rem;
            > .employee-img {
                margin: 0 auto;
                width:200px;
            }
            > .employee-name {
                text-align:center;
                color:#111;
            }
        }
        overflow:hidden;
    }

    .footer {
        background-color: @footer-bg-color;
        padding: 0px;
        .list-group-item {
            color: @footer-text-color;
            background-color: @footer-bg-color;
            padding-left: 0;
            padding-right: 0;
            padding-bottom: 0.4rem;
            padding-top: 0.4rem;
            a {
                color: @footer-text-color;
            }
        }
        h4 {
            color: @footer-text-color;
        }
        p {
            color: @footer-text-color;
        }
        .made-by-tsm {
            background-color: @footer-dark-bg-color;
            color: lightgray;
            width: 100%;
            padding: 15px;
            margin-top: 20px;
            text-align: center;
        }
    }

    .parallax {
        background: url('./../images/flowers.jpg');
        min-height: 100vh;
        background-position: center;
        background-repeat: no-repeat;
        background-size: cover;
        display: flex;
        justify-content: center;
        align-items: center;
        margin-bottom: 20px;
        > .parallax-content {
			color: #111;
            text-align: center;
			margin: 20px;
			padding: 20px;
			height: 200px;
            font-size: 2.4em;
        }
    }
    .message {
        padding:10px;
        margin-bottom:10px;
    }
    .message-why {
        background-color:#fff3c5ab;
        padding:15px;
        .why-header {
            text-align:center;
        }
        .why-item {
            margin-top:10px;
        }
    }

    i.fab:hover {
        animation: bounce 0.5s linear;
    }

    .fa-facebook-square {
        color: @footer-text-color;
        margin-top: 10px;
    }

    .fa-twitter-square {
        color: @footer-text-color;
        margin-top: 10px;
    }

    .fa-instagram-square {
        color: @footer-text-color;
        margin-top: 10px;
    }

    @keyframes bounce {
        20% {
            transform: translateY(-6px);
        }
        40% {
            transform: translateY(0px);
        }
        80% {
            transform: translateY(-2px);
        }
        100% {
            transform: translateY(0);
        }
    }
}

@media screen and (min-width: 992px) {
    .parallax {
        min-height: 90vh;
        > .parallax-content {
            font-size: 3.4em;
        }
    }
}

